test/corpus/deffunction.txt
================================================================================
Return statements
================================================================================

(deffunction goal-meta-assign-robot-to-goal (?goal ?robot)
"Changes an existing goal-meta fact and assign it to the given robot"
  (if (eq (fact-slot-value ?goal id) FALSE) then
    (printout t "Goal has no id! " ?goal crlf)
    (return)
  )
  (if (eq ?robot nil) then (return ))
  (if (not (do-for-fact ((?f goal-meta))
      (and (eq ?f:goal-id (fact-slot-value ?goal id))
           (or (eq ?f:restricted-to ?robot)
               (eq ?f:restricted-to nil)))
      (modify ?f (assigned-to ?robot))))
   then
    (printout t "FAILED assign robot " ?robot " to goal "
      (fact-slot-value ?goal id) crlf)
  )
)

--------------------------------------------------------------------------------

(CLIPS_program
  (construct
    (deffunction_construct
      (name
        (symbol))
      (regular_parameter
        (single_field_variable
          (symbol)))
      (regular_parameter
        (single_field_variable
          (symbol)))
      (action
        (constant
          (string)))
      (action
        (function_call
          (if_statement
            (function_call
              (function_name
                (symbol))
              (function_call
                (function_name
                  (symbol))
                (variable
                  (single_field_variable
                    (symbol)))
                (constant
                  (symbol)))
              (constant
                (symbol)))
            (then)
            (cond_body
              (function_call
                (function_name
                  (symbol))
                (constant
                  (symbol))
                (constant
                  (string))
                (variable
                  (single_field_variable
                    (symbol)))
                (constant
                  (symbol)))
              (function_call
                (function_name
                  (symbol)))))))
      (action
        (function_call
          (if_statement
            (function_call
              (function_name
                (symbol))
              (variable
                (single_field_variable
                  (symbol)))
              (constant
                (symbol)))
            (then)
            (cond_body
              (function_call
                (function_name
                  (symbol)))))))
      (action
        (function_call
          (if_statement
            (function_call
              (function_name
                (symbol))
              (function_call
                (fact_query
                  (do_for_fact_expression
                    (fact_set_template
                      (fact_set_member_template
                        (single_field_variable
                          (symbol))
                        (name
                          (symbol))))
                    (query
                      (function_call
                        (function_name
                          (symbol))
                        (function_call
                          (function_name
                            (symbol))
                          (variable
                            (special_variable
                              (symbol)
                              (name
                                (symbol))))
                          (function_call
                            (function_name
                              (symbol))
                            (variable
                              (single_field_variable
                                (symbol)))
                            (constant
                              (symbol))))
                        (function_call
                          (function_name
                            (symbol))
                          (function_call
                            (function_name
                              (symbol))
                            (variable
                              (special_variable
                                (symbol)
                                (name
                                  (symbol))))
                            (variable
                              (single_field_variable
                                (symbol))))
                          (function_call
                            (function_name
                              (symbol))
                            (variable
                              (special_variable
                                (symbol)
                                (name
                                  (symbol))))
                            (constant
                              (symbol))))))
                    (action
                      (function_call
                        (function_name
                          (symbol))
                        (variable
                          (single_field_variable
                            (symbol)))
                        (function_call
                          (function_name
                            (symbol))
                          (variable
                            (single_field_variable
                              (symbol))))))))))
            (then)
            (cond_body
              (function_call
                (function_name
                  (symbol))
                (constant
                  (symbol))
                (constant
                  (string))
                (variable
                  (single_field_variable
                    (symbol)))
                (constant
                  (string))
                (function_call
                  (function_name
                    (symbol))
                  (variable
                    (single_field_variable
                      (symbol)))
                  (constant
                    (symbol)))
                (constant
                  (symbol))))))))))
